--- a/.gitignore
+++ b/.gitignore
@@ -1,45 +1,66 @@
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# Dependencies
 /node_modules
 /.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+.pnp.js
 
-# testing
+# Testing
 /coverage
 
-# next.js
+# Next.js
 /.next/
 /out/
 
-# production
+# Production
 /build
 
-# misc
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Local Environment Variables
+.env
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
 
-# vercel
-.vercel
+# Editor directories and files
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.sublime-workspace
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# IDEs and editors
+/.idea
+/dist
+/temp
+*.iml
+/target
+.project
+.classpath
 
-.genkit/*
-.env*
-
-# firebase
+# Firebase
 firebase-debug.log
+firebase-debug.*.log
 firestore-debug.log
+firestore-debug.*.log
+firebase.json
+.firebaserc
+database-debug.log
+
+# Genkit (if using local state files, adjust if needed)
+.genkit/state/
+
+# IDX specific (if any, usually handled by .gitignore from IDX itself)
+# .idx/
