--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack-query-firebase/react": "^1.0.5",
     "@tanstack/react-query": "^5.66.0",
+    "@tiptap/extension-color": "^2.5.6",
+    "@tiptap/extension-image": "^2.5.6",
+    "@tiptap/extension-link": "^2.5.6",
+    "@tiptap/extension-text-style": "^2.5.6",
     "@tiptap/extension-underline": "^2.5.6",
     "@tiptap/pm": "^2.5.6",
     "@tiptap/react": "^2.5.6",
